--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- www.maurycy.xyz, autor: Maurycy Bartczak <maurycy@maurycy.xyz>, wszelkie prawa zastrzeżone © 2021r. -->
+<!-- www.maurycy.xyz, autor: Maurycy Bartczak <maurycy.bartczak@gmail.com>, wszelkie prawa zastrzeżone © 2021r. -->
     <!DOCTYPE html>
     <html>
     <head>
