--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                       <li><a href="https://maurycy.xyz/">Kontakt</a></li>
                       <li><a href="https://maurycy.xyz/">O mnie</a></li>
                       
-                     <li><a target="_blank" href="https://github.com/Maurycyxyz">github</a></li>
+                     <li><a target="_blank" href="https://github.com/Maurycyxyz">GitHub</a></li>
                     </ul>
                   </div>
                 </div>
