--- a/pracadomowa/strona.html
+++ b/pracadomowa/strona.html
@@ -92,7 +92,8 @@
             <td class="Nd"></td>
         </tr>
     </table>
+       <a href="https://maurycy.xyz/">Maurycy Bartczak 3ia4</a>
 </center>
-    <footer>Maurycy Bartczak © 2021</footer>
+    
 </body>
 </html>
