--- a/pracadomowa/strona.html
+++ b/pracadomowa/strona.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Maurycy Bartczak">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tabelka - Maurycy Bartczak</title>
     <style>
@@ -71,6 +72,7 @@
             <td>16</td>
             <td>17</td>
             <td>18</td>
+            <!-- Maurycy Bartczak -->
             <td class="Nd">19</td>
         </tr>
         <tr>
