--- a/pracadomowa/strona.html
+++ b/pracadomowa/strona.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Maurycy Bartczak">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tabelka - Maurycy Bartczak</title>
+    <title>tabelka - Maurycy Bartczak - sprawdzian1</title>
     <style>
         *{margin-left: 0;margin-right: 0;margin-top: 0;}
         *{transition: font-size 0.2s ease-in-out; }
