--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <div>
                     <ul>
                       <li><a href="https://maurycy.xyz/">Kontakt</a></li>
-                      <li><a href="https://maurycy.xyz/">O mnie</a></li>
+                      <li><a href="https://maurycy.xyz/zegar/">Zegar</a></li>
                       
                      <li><a target="_blank" href="https://github.com/Maurycyxyz">GitHub</a></li>
                     </ul>
