--- a/zegar/index.html
+++ b/zegar/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./zegar.css">
     
 
-    <title>Document</title>
+    <title>Nowy Rok</title>
 </head>
 <body>
     <center>
