--- a/zegar/index.html
+++ b/zegar/index.html
@@ -16,7 +16,7 @@
     </div>
     <br>
 
-    <div class="doczasu">Do nowego roku zostało:
+    <div class="doczasu">Do wakacji zostało:
         <p id="czas"></p>
     </div>
     </center>
