--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                   <div>
                     <ul>
                       <li><a href="https://maurycy.xyz/">Kontakt</a></li>
-                      <li><a href="https://maurycy.xyz/zegar/">Zegar</a></li>
-                      <li><a href="https://maurycy.xyz/klocek/">Klocek</a></li>
-                        <li><a href="https://maurycy.xyz/www/">Strona.v2</a></li>
+                      <li><a target="_blank" href="https://maurycy.xyz/zegar/">Zegar</a></li>
+                      <li><a target="_blank" href="https://maurycy.xyz/klocek/">Klocek</a></li>
+                        <li><a target="_blank" href="https://maurycy.xyz/www/">Strona.v2</a></li>
                      <li><a target="_blank" href="https://github.com/Maurycyxyz">GitHub</a></li>
                     </ul>
                   </div>
