--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <div>
                     <ul>
                       <li><a href="https://maurycy.xyz/">Kontakt</a></li>
-                      <li><a target="_blank" href="https://maurycy.xyz/zegar/">Zegar</a></li>
+<!--                       <li><a target="_blank" href="https://maurycy.xyz/"></a></li> -->
                      <li><a target="_blank" href="https://github.com/Maurycyxyz">GitHub</a></li>
                     </ul>
                   </div>
@@ -42,11 +42,11 @@
 
             <div class="informacje">
               <h1>Maurycy Bartczak</h1>
-              <h2>E-mail: maurycy.bartczak@gmail.com</h2>
+              <h2>E-mail: maurycy@maurycy.xyz</h2>
               <h3>Discord: Maurycy#6307</h3>
             </div>
             <div class="footer">
-              <footer>Maurycy Bartczak © 2022</footer>
+              <footer>Maurycy Bartczak © 2023</footer>
             </div>
             <canvas id="canvas"></canvas>
           <script  src="./assets/kolorki.js"></script>
