Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
         <div class="card" data-tilt>
             <h1>Maurycy Bartczak</h1>
             <h2>E-mail: maurycy@maurycy.xyz</h2>
-            <h3>Discord: @maurycy__</h3>
+            <h3>Signal: Maurycy.11</h3>
+            <h3>Discord: maurycy__</h3>
+            <h3>GitHub: Maurycyxyz</h3>
             <div class="links">
-                <a href="https://discord.gg/snu5Uwsz" target="_blank"><img src="./assets/icons8-discord-50.png" alt="Discord: @maurycy__"></a>
-                <a href="maurycy.xyz"><img src=""></a>
+                <a href="https://signal.me/#eu/kUjZ95c8ZBbhpaCeDz+ZTTdzx2GYg5dnlgn07WxAKWeTLyXysPtPR5ZEZ6zt9lnp" target="_blank"><img src="./assets/icons8-signal-app-50.png"></a>
+                <a href="https://discord.gg/snu5Uwsz" target="_blank"><img src="./assets/icons8-discord-50.png" alt="Discord: maurycy__"></a>
                 <a href="https://github.com/Maurycyxyz" target="_blank"><img src="./assets/github.png"></a>
             </div>
         </div>
