--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container ">
         <div class="card" data-tilt>
             <h1>Maurycy Bartczak</h1>
-            <h2>E-mail: maurycy@maurycy.xyz</h2>
+            <h2>E-mail: maurycy@bartczak.xyz</h2>
             <h3>Signal: Maurycy.11</h3>
             <h3>Discord: maurycy__</h3>
             <h3>GitHub: Maurycyxyz</h3>
